properly design controls

--- a/Files/control.html
+++ b/Files/control.html
@@ -6,53 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>plaything.io</title>
     <link rel="stylesheet" href="style.css">
+    <script src="scripts.js"></script>
     <script src="https://kit.fontawesome.com/3171beee0f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="main">
         <div class="topbar">
             <div class="topbar-left">
-                <b>Mae</b> @ Banana Peel
+                <b>Mae</b> @ peri-stuff <i class="fa-solid fa-chevron-right" style="transform: scale(0.6)"></i> Banana Peel
             </div>
             <div class="topbar-right">
                 <button onclick="window.location.href = 'devices'"><i class="fa-solid fa-arrow-left"></i> Back</button>
             </div>
         </div>
-        <div class="content control-list">
-            <div class="control-button">
-                <i class="fa-solid fa-power-off"></i>
-            </div>
-            <div class="control-slider">
-                <div class="handle">
-                    <div><i class="fa-solid fa-caret-right"></i></div>
+        <div class="content">
+            <div class="share">
+                <div class="control-list">
+                    <div class="control-button">
+                        <div class="control-label">On/Off</div>
+                        <div class="button-inner button font-icon">
+                            <i class="fa-solid fa-power-off"></i>
+                        </div>
+                    </div>
+                    <div class="control-slider">
+                        <div class="control-label">Power</div>
+                        <div class="bar"></div>
+                        <div class="bar-fill"></div>
+                        <div class="notches">
+                            <div><div class="notch-label">100</div><div class="notch"></div></div>
+                            <div><div class="notch-label">90</div><div class="notch"></div></div>
+                            <div><div class="notch-label">80</div><div class="notch"></div></div>
+                            <div><div class="notch-label">70</div><div class="notch"></div></div>
+                            <div><div class="notch-label">60</div><div class="notch"></div></div>
+                            <div><div class="notch-label">50</div><div class="notch"></div></div>
+                            <div><div class="notch-label">40</div><div class="notch"></div></div>
+                            <div><div class="notch-label">30</div><div class="notch"></div></div>
+                            <div><div class="notch-label">20</div><div class="notch"></div></div>
+                            <div><div class="notch-label">10</div><div class="notch"></div></div>
+                            <div><div class="notch-label">0</div><div class="notch"></div></div>
+                        </div>
+                        <div class="slider"></div>
+                    </div>
                 </div>
-                <div class="notches">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
-                <div class="bar">
-                    <div><div><div></div></div></div>
+                <div class="cursor" style="--user-color: var(--colorRed)">
+                    <i class="fa-solid fa-arrow-pointer"></i>
+                    <div class="cursor-name">
+                        Ifnis
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="wrapper">
-        <div class="chat" style="left: 80px; right: auto; bottom: -300px;">
+        <!-- <div class="chat" style="left: 80px; right: auto; bottom: -300px;">
             <div class="chat-header">Chat @ Banana Peel</div>
             <div class="chat-messages">
                 <div class="timestamp">2 minutes ago</div>
@@ -62,7 +69,7 @@
                 <input type="text" name="chatmsg" id="chatmsg" placeholder="Type a message...">
                 <button>Send</button>
             </div>
-        </div>
+        </div> -->
     
         <div id="options-button" onclick="window.location.href = 'optionsOverlay'">
             <i class="fa-solid fa-gear"></i>
