--- a/Files/devices.html
+++ b/Files/devices.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>plaything.io</title>
     <link rel="stylesheet" href="style.css">
+    <script src="scripts.js"></script>
     <script src="https://kit.fontawesome.com/3171beee0f.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -44,7 +45,7 @@
     </div>
 
     <div class="wrapper">
-        <div class="chat">
+        <!-- <div class="chat">
             <div class="chat-header">Chat @ peri-stuff</div>
             <div class="chat-messages">
                 <div class="timestamp">2 minutes ago</div>
@@ -78,7 +79,7 @@
                 <input type="text" name="chatmsg" id="chatmsg" placeholder="Type a message...">
                 <button>Send</button>
             </div>
-        </div>
+        </div> -->
     
         <div id="options-button" onclick="window.location.href = 'optionsOverlay'">
             <i class="fa-solid fa-gear"></i>
