--- a/Files/optionsOverlay.html
+++ b/Files/optionsOverlay.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>plaything.io</title>
     <link rel="stylesheet" href="style.css">
+    <script src="scripts.js"></script>
     <script src="https://kit.fontawesome.com/3171beee0f.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -44,7 +45,7 @@
     </div>
 
     <div class="wrapper">
-        <div class="chat">
+        <!-- <div class="chat">
             <div class="chat-header">Chat @ peri-stuff</div>
             <div class="chat-messages">
                 <div class="timestamp">2 minutes ago</div>
@@ -78,7 +79,7 @@
                 <input type="text" name="chatmsg" id="chatmsg" placeholder="Type a message...">
                 <button>Send</button>
             </div>
-        </div>
+        </div> -->
     
         <div id="options-button" onclick="window.location.href = 'optionsOverlay'">
             <i class="fa-solid fa-gear"></i>
@@ -95,13 +96,17 @@
                     <option value="dracula" title="The default dark theme" selected>Dracula</option>
                     <option value="light" title="A colorful light theme">Light</option>
                 </select></div>
-                <div><label for="showOthers">Show Others' Cursors:</label></div>
+                <div><label for="showOthers" title="show others' cursors on the control pages">Show Others' Cursors:</label></div>
                 <div><input type="checkbox" name="showOthers" id="showOthers" checked></div>
-                <div><label for="chatEnabled">Enable Chat:</label></div>
+
+                <div><label for="chatEnabled" title="show messages created with right click > comment">Show Messages:</label></div>
                 <div><input type="checkbox" name="chatEnabled" id="chatEnabled" checked></div>
+ 
+                <div><label for="owncolour" title="the colour of your cursor and the accent colour of the website">Accent Colour:</label></div>
+                <div><input type="color" name="owncolour" id="owncolour" value="#ff79c6"></div>
             </div>
             <br>
-            <center><small>your settings are saved locally</small></center>
+            <center><small>your settings are saved on the cloud</small></center>
         </div>
     </div>
 </body>
