create light theme

--- a/Files/devices.html
+++ b/Files/devices.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Remote control device selection">
     <title>plaything.io</title>
     <link rel="stylesheet" href="style.css">
     <script src="scripts.js"></script>
     <script src="https://kit.fontawesome.com/3171beee0f.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body theme="light">
     <div class="main">
         <div class="topbar">
             <div class="topbar-left">
