start work on cherry theme

--- a/Files/control.html
+++ b/Files/control.html
@@ -10,7 +10,7 @@
     <script src="scripts.js"></script>
     <script src="https://kit.fontawesome.com/3171beee0f.js" crossorigin="anonymous"></script>
 </head>
-<body theme="light">
+<body theme="dracula">
     <div class="main">
         <div class="topbar">
             <div class="topbar-left">
@@ -46,7 +46,7 @@
                             <div><div class="notch-label">10</div><div class="notch"></div></div>
                             <div><div class="notch-label">0</div><div class="notch"></div></div>
                         </div>
-                        <div class="slider"></div>
+                        <div class="handle"></div>
                     </div>
                 </div>
                 <div class="cursor" style="--user-color: var(--colorRed)">
