--- a/Files/devices.html
+++ b/Files/devices.html
@@ -10,7 +10,7 @@
     <script src="scripts.js"></script>
     <script src="https://kit.fontawesome.com/3171beee0f.js" crossorigin="anonymous"></script>
 </head>
-<body theme="light">
+<body theme="dracula">
     <div class="main">
         <div class="topbar">
             <div class="topbar-left">
