--- a/Files/optionsOverlay.html
+++ b/Files/optionsOverlay.html
@@ -10,7 +10,7 @@
     <script src="scripts.js"></script>
     <script src="https://kit.fontawesome.com/3171beee0f.js" crossorigin="anonymous"></script>
 </head>
-<body theme="light">
+<body theme="dracula">
     <div class="main">
         <div class="topbar">
             <div class="topbar-left">
@@ -95,7 +95,8 @@
                 <div><label for="theme">Theme:</label></div>
                 <div><select name="theme" id="theme">
                     <option value="dracula" title="The default dark theme" selected>Dracula</option>
-                    <option value="light" title="A colorful light theme">Light</option>
+                    <option value="cherry" title="A colorful light theme">Cherry</option>
+                    <option value="light" title="The default light theme">Light</option>
                 </select></div>
                 <div><label for="showOthers" title="show others' cursors on the control pages">Show Others' Cursors:</label></div>
                 <div><input type="checkbox" name="showOthers" id="showOthers" checked></div>
