--- a/Files/login.html
+++ b/Files/login.html
@@ -10,7 +10,7 @@
     <script src="scripts.js"></script>
     <script src="https://kit.fontawesome.com/3171beee0f.js" crossorigin="anonymous"></script>
 </head>
-<body theme="light">
+<body theme="dracula">
     <vcenter>
         <i class="fa-solid fa-user fa-2x"></i>
         <label for="nickname" title="Nickname is required">Nickname*</label>
