implement basic websocket API

--- a/old_files/control.html
+++ b/old_files/control.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Remote control device panel">
     <title>plaything.io</title>
     <link rel="stylesheet" href="style.css">
-    <script src="scripts.js"></script>
+    <script src="Scripts.js"></script>
     <script src="https://kit.fontawesome.com/3171beee0f.js" crossorigin="anonymous"></script>
 </head>
 <body theme="dracula">
