cleanup and add ability to open options overlay

--- a/Files/bootstrap.html
+++ b/Files/bootstrap.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Mockup page for user settings">
+    <meta name="description" content="Panel for managing remote control devices">
     <title>plaything.io</title>
     <link rel="stylesheet" href="style.css">
     <script src="Scripts.js" type="module"></script>
